# guide-project-demo

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt
config/: config.yaml  test.yaml
docs/: index.md  quick_start.md  refs.bib
docs/api/: index.md
src/: __init__.py  bad.py  bad_format.py  doc_me.py
tests/: __init__.py  test_me.py  write_test.py
