[tool.poetry]
name = "guide-demo"
version = "0.1.0"
description = "A demo repo for collaborative python project."
authors = ["SongshGeo <songshgeo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "guide_demo"}]

[tool.poetry.dependencies]
python = ">=3.9.2,<3.12"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
allure-pytest = "^2.13.2"
pytest-clarity = "^1.0.1"
pytest-sugar = "^0.9.7"
flake8 = "^6.1.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"
interrogate = "^1.5.0"
sourcery = "^1.10.0"
ipykernel = "^6.25.2"
jupyterlab = "^4.0.6"
jupyterlab-execute-time = "^3.0.1"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
bandit = "^1.7.5"
black = "^23.9.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.1"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-bibtex = "^2.11.0"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-jupyter = "^0.24.2"
mkdocs-callouts = "^1.9.1"
mkdocs-glightbox = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | build
  | dist
)/
'''
